Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28171

Qt 5 creates too many DragMove events

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.0.0 RC 1
    • GUI: Drag and Drop
    • None
    • Ubuntu 12.10
    • Change-Id: I355d88f3eab0ad39f916f84d66f5d0af7c0ff93e

      When running the itemviews 'interview' example/demo, if an item in the listview is dragged to the bottom of the widget to start auto-scroll, it accelerates in Qt 4, but remains a very slow auto-scroll in Qt 5.

      The debug output shows that many DragMove events are being created in Qt 5 that were not present in Qt 4.

      diff --git a/src/widgets/widgets/qabstractscrollarea.cpp b/src/widgets/widgets/qabstractscrollarea.cpp
      index 3c21d76..b53a33e 100644
      --- a/src/widgets/widgets/qabstractscrollarea.cpp
      +++ b/src/widgets/widgets/qabstractscrollarea.cpp
      @@ -1131,6 +1131,10 @@ bool QAbstractScrollArea::event(QEvent *e)
       */
       bool QAbstractScrollArea::viewportEvent(QEvent *e)
       {
      +    if (e->type() == QEvent::DragMove) {
      +      qDebug() << "GOT A DragMove";
      +    }
      +
           switch (e->type()) {
           case QEvent::Resize:
           case QEvent::Paint:
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            paeglis Gatis Paeglis
            stephen.kelly Stephen Kelly (Unused account) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes